--- a/app/src/main/res/layout/state_row.xml
+++ b/app/src/main/res/layout/state_row.xml
@@ -1,25 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
+
+    <TextView
+        android:id="@+id/state"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/state"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="5dp"
-            android:text="@string/state"
-            android:textAlignment="textStart"
-            android:textColor="@color/black"
-            android:textSize="15sp" />
-
-    </LinearLayout>
+        android:padding="5dp"
+        android:text="@string/state"
+        android:textAlignment="textStart"
+        android:textColor="@color/black"
+        android:textSize="15sp" />
 
 
 </RelativeLayout>
