--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -272,6 +272,7 @@
                     android:textSize="20sp" />
 
                 <Spinner
+                    android:spinnerMode="dropdown"
                     android:id="@+id/spinner_country"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
